@@ -760,6 +760,9 @@ Release 2.8.0 - UNRELEASED
     HDFS-8811. Move BlockStoragePolicy name's constants from
     HdfsServerConstants.java to HdfsConstants.java (vinayakumarb)
 
+    HDFS-8822. Add SSD storagepolicy tests in TestBlockStoragePolicy#
+    testDefaultPolicies (vinayakumarb)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
